@@ -104,7 +104,8 @@
 #include "ccxResultParaViewJobCommand.hpp"
 #include "ccxResultLoadJobCommand.hpp"
 #include "ccxResultConvertJobCommand.hpp"
-#include "ccxResultPlotJobCommand.hpp"
+#include "ccxResultPlotJobFrdCommand.hpp"
+#include "ccxResultPlotJobDatCommand.hpp"
 #include "ccxResultProjectJobCommand.hpp"
 #include "ccxKillJobCommand.hpp"
 #include "ccxCustomLineCreateCommand.hpp"
@@ -230,7 +231,8 @@ std::vector<std::string> CalculiXPlugin::get_keys()
   keys.push_back("ccxResultParaViewJobCommand");
   keys.push_back("ccxResultLoadJobCommand");
   keys.push_back("ccxResultConvertJobCommand");
-  keys.push_back("ccxResultPlotJobCommand");
+  keys.push_back("ccxResultPlotJobFrdCommand");
+  keys.push_back("ccxResultPlotJobDatCommand");
   keys.push_back("ccxResultProjectJobCommand");
   keys.push_back("ccxCustomLineCreateCommand");
   keys.push_back("ccxCustomLineModifyCommand");
@@ -556,8 +558,11 @@ CubitCommand* CalculiXPlugin::create_command(const std::string &key)
   else if(key == "ccxResultProjectJobCommand")
     return new ccxResultProjectJobCommand();
 
-  else if(key == "ccxResultPlotJobCommand")
-    return new ccxResultPlotJobCommand();
+  else if(key == "ccxResultPlotJobFrdCommand")
+    return new ccxResultPlotJobFrdCommand();
+
+  else if(key == "ccxResultPlotJobDatCommand")
+    return new ccxResultPlotJobDatCommand();
 
   else if(key == "ccxKillJobCommand")
     return new ccxKillJobCommand();
