@@ -203,8 +203,10 @@ set(CMD_SRC
     ${CMAKE_CURRENT_LIST_DIR}/ccxResultLoadJobCommand.hpp
     ${CMAKE_CURRENT_LIST_DIR}/ccxResultConvertJobCommand.cpp
     ${CMAKE_CURRENT_LIST_DIR}/ccxResultConvertJobCommand.hpp
-    ${CMAKE_CURRENT_LIST_DIR}/ccxResultPlotJobCommand.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/ccxResultPlotJobCommand.hpp    
+    ${CMAKE_CURRENT_LIST_DIR}/ccxResultPlotJobFrdCommand.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/ccxResultPlotJobFrdCommand.hpp
+    ${CMAKE_CURRENT_LIST_DIR}/ccxResultPlotJobDatCommand.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/ccxResultPlotJobDatCommand.hpp    
     ${CMAKE_CURRENT_LIST_DIR}/ccxResultProjectJobCommand.cpp
     ${CMAKE_CURRENT_LIST_DIR}/ccxResultProjectJobCommand.hpp    
     ${CMAKE_CURRENT_LIST_DIR}/ccxResultCGXJobCommand.cpp
