@@ -590,9 +590,14 @@ bool CalculiXCoreInterface::result_paraview_job(int job_id)
   return ccx_core.result_paraview_job(job_id);
 }
 
-bool CalculiXCoreInterface::result_plot_job(int job_id)
+bool CalculiXCoreInterface::result_plot_job_frd(int job_id,int x_node_id, std::string x_block_type, std::string x_block_component, bool x_increment,bool x_time,int y_node_id, std::string y_block_type, std::string y_block_component, bool y_increment, bool y_time,QString title,QString x_axis,QString y_axis)
 {
-  return ccx_core.result_plot_job(job_id);
+  return ccx_core.result_plot_job_frd(job_id,x_node_id,x_block_type,x_block_component,x_increment,x_time,y_node_id,y_block_type,y_block_component,y_increment,y_time,title,x_axis,y_axis);
+}
+
+bool CalculiXCoreInterface::result_plot_job_dat(int job_id)
+{
+  return ccx_core.result_plot_job_dat(job_id);
 }
 
 std::vector<std::string> CalculiXCoreInterface::get_job_data(int job_id)
